--- a/DIVS/EjercicioAgrupacionContII1.html
+++ b/DIVS/EjercicioAgrupacionContII1.html
@@ -40,6 +40,18 @@
             <li><a href="https://www.casadellibro.com/">CONTACTO</a></li>
         </ul>
         </div>
+        <div id="div5">
+        <h2>Búscanos en:</h2>
+        <ul>
+            <li><a href="https://twitter.com/">Twitter</a></li>
+            <li><a href="https://instagram.com/">Instagram</a></li>
+            <li><a href="https://facebook.com/">Facebook</a></li>
+        </ul>
+        </div>
+        <div id="div6">
+            <p>Recibe nuestas novedades en libros en tu email<br>
+            Descuentos en libros, últimos títulos publicados y mucho más</p>
+        </div>
    
        
 </body>
