--- a/TABLAS/EjercicioEjTablas2.html
+++ b/TABLAS/EjercicioEjTablas2.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./EstilosEjTablas2.css">
+    <link rel="stylesheet" href="./Estilos/EstilosEjTablas2.css">
 </head>
 <body>
     <div>
-        <h1>Tabla 1</h1>
+        <h1>Tabla 1 </h1>
         <table>
-
+            <tr>
+                <th>A</th>
+                <th>B</th>
+                <th>C</th>
+                <th>D</th>
+                <th>E</th>
+                <th>H</th>
+                <th>L</th>
+            </tr>
+             <tr>
+                <td>E</td>
+                <td>I</td>
+                <td>F</td>
+                <td>G</td>
+            </tr>
+            <tr>   
+                <td>J</td>    
+                <td>K</td>
+                <td>O</td>
+            </tr>
+            <tr>
+                <td>M</td>
+                <td>N</td>
+                <td>P</td>
+            </tr>
 
         </table>
     </div>
