--- a/FORMULARIOS/Ejercicio6Apuntes.html
+++ b/FORMULARIOS/Ejercicio6Apuntes.html
@@ -41,6 +41,7 @@
         <label for="elemento9">Lectura</label>
         <br>
         <label for="elemento10" >Subir foto:</label>
+        <button></button>
 
         
 
