--- a/FORMULARIOS/Ejercicio9Apuntes.html
+++ b/FORMULARIOS/Ejercicio9Apuntes.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <form action="inmobiliarias.com" >
+    <form action="exito.html" >
         <label for="formulario">Seleccione el tipo de inmueble</label>
         <select name="select" id="formulario">
             <option value="" selected>Escoja una opción</option>
