--- a/EJERCICIO REPASO TABLAS/RepasoObjetosMultimedia.html
+++ b/EJERCICIO REPASO TABLAS/RepasoObjetosMultimedia.html
@@ -23,7 +23,7 @@
 
 
     </div>
-    <video src="./RECURSOS/vertical.mp4"></video>
+    <video src="./RECURSOS/vertical.mp4" id="video"></video>
     
 </body>
 </html>
