--- a/JAVASCRIPTDOM/Ejercicio11Apuntes.html
+++ b/JAVASCRIPTDOM/Ejercicio11Apuntes.html
@@ -16,7 +16,8 @@
 
     <button type="button" onclick="cambiarElemento()">ver datos2</button>
 
-    <button type="button" onclick="añadirHijo()">ver datos2</button>
+    <button type="button" onclick="añadirHijo()">ver datos3</button>
     
+    <button type="button" onclick="cambiarTitulo()">ver datos4</button>
 </body>
 </html>
