--- a/JAVASCRIPTDOM/Ejercicio12Apuntes/Ejercicio12Apuntes.html
+++ b/JAVASCRIPTDOM/Ejercicio12Apuntes/Ejercicio12Apuntes.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1 id="encabezado1">EJERCICIO 11</h1>
+    <h1 id="encabezado1">EJERCICIO 12</h1>
 
     <button type="button" onclick="crearLista()">Punto1</button>
 
@@ -23,7 +23,7 @@
 
     <button type="button" onclick="boton1()">Botón 1</button>
 
-    <button type="button" onclick="">Botón 2</button>
+    <button type="button" onclick="boton2()">Botón 2</button>
 
     <button type="button" onclick="">Botón 3</button>
 
